# pico-sdk-experiments

./: README.md
Pico-Projects/DMA/hello_dma/: CMakeLists.txt  hello_dma.c
Pico-Projects/DMA/withDMA/: CMakeLists.txt  withDMA.c
Pico-Projects/DMA/withoutDMA/: CMakeLists.txt  noDMA.c
Pico-Projects/PWM-use-SPI-Slave/: CMakeLists.txt  pwm_spi_slave.c
Pico-Projects/SPI-Slave/: CMakeLists.txt  spi_slave.c
Pico-Projects/SPI-toMyself/: CMakeLists.txt  spi_Myself.c
Pico-Projects/blinky/: CMakeLists.txt  blinky.c
Pico-Projects/hello_world/: CMakeLists.txt  hello_world.c
Pico-Projects/i2c-lm75/: CMakeLists.txt  lm75.c
Pico-Projects/multicore-Blinky-HelloWorld/: CMakeLists.txt  blinky-hello.c
Pico-Projects/scan-i2c/: CMakeLists.txt  scani2c.c
